<resources>
    <string name="app_name">SmartInvest</string>
    <string name="empty_savedfunds">No Fund Found</string>
    <string name="add_fund">Add Fund</string>
    <string name="enter_fundname">Add Fund Name</string>
    <string name="enter_fundsymbol">Add Fund Symbol</string>

    <string name="onefund_avgcost">Average Cost</string>
    <string name="onefund_shares">Shares</string>
    <string name="onefund_totalreturn">Total \nReturn</string>
    <string name="onefund_annualreturn">Annual Return Rate </string>
    <string name="onefund_peakannualreturn">Peak Annual Return Rate </string>
    <string name="onefund_history">Transaction History</string>
    <string name="onefund_addtran">Add Transactions</string>
    <string name="onefund_deltran">Delete</string>
    <string name="onefund_updatetran">Update</string>
    <string name="onefund_currprice">Price</string>
    <string name="onefund_nodetail">NaN</string>


    <string name="savetrans_transdate">Transaction Date</string>
    <string name="saverans_transstate">Transaction Type</string>
    <string name="savetrans_transprice">Price</string>
    <string name="savetrans_transshares">Shares</string>
    <string name="savetrans_transamount">Amount</string>
    <string name="savetrans_savetran">Save</string>
    <string name="savetrans_updatetran">Update</string>

</resources>
