<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AddFundActivity">

    <EditText
        android:id="@+id/addfund_et_fundname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_fundname">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/addfund_et_fundsymbol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_fundsymbol"
        android:inputType="textMultiLine"
        android:minLines="5">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addfund_btn_addrecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_fund"/>


</LinearLayout>